--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@tarojs/taro-rn": "3.5.12",
     "@tarojs/webpack-runner": "3.5.12",
     "async-validator": "^4.2.5",
-    "cross-ui": "4.0.5",
+    "cross-ui": "^4.0.10",
     "dayjs": "^1.11.6",
     "expo": "~46.0.2",
     "mobx": "^4.8.0",
