--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "disscode-taro",
+  "name": "appthen-taro-starter",
   "version": "1.0.0",
   "private": true,
-  "description": "taro mini project",
+  "description": "Appthen Taro Starter Project",
   "main": "dist/index.js",
   "scripts": {
     "build:weapp": "taro build --type weapp",
@@ -33,32 +33,31 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@babel/runtime": "^7.7.7",
-    "@tarojs/components": "3.5.12",
-    "@tarojs/helper": "3.5.12",
-    "@tarojs/plugin-framework-react": "3.5.12",
-    "@tarojs/plugin-html": "3.5.12",
-    "@tarojs/plugin-platform-alipay": "3.5.12",
-    "@tarojs/plugin-platform-jd": "3.5.12",
-    "@tarojs/plugin-platform-qq": "3.5.12",
-    "@tarojs/plugin-platform-swan": "3.5.12",
-    "@tarojs/plugin-platform-tt": "3.5.12",
-    "@tarojs/plugin-platform-weapp": "3.5.12",
-    "@tarojs/react": "3.5.12",
-    "@tarojs/rn-runner": "3.5.12",
-    "@tarojs/router": "3.5.12",
-    "@tarojs/runtime": "3.5.12",
-    "@tarojs/shared": "3.5.12",
-    "@tarojs/taro": "3.5.12",
-    "@tarojs/taro-h5": "3.5.12",
-    "@tarojs/taro-rn": "3.5.12",
-    "@tarojs/webpack-runner": "3.5.12",
+    "@babel/runtime": "^7.21.5",
+    "@tarojs/components": "3.6.22",
+    "@tarojs/helper": "3.6.22",
+    "@tarojs/plugin-framework-react": "3.6.22",
+    "@tarojs/plugin-html": "3.6.22",
+    "@tarojs/plugin-platform-alipay": "3.6.22",
+    "@tarojs/plugin-platform-jd": "3.6.22",
+    "@tarojs/plugin-platform-qq": "3.6.22",
+    "@tarojs/plugin-platform-swan": "3.6.22",
+    "@tarojs/plugin-platform-tt": "3.6.22",
+    "@tarojs/plugin-platform-weapp": "3.6.22",
+    "@tarojs/react": "3.6.22",
+    "@tarojs/rn-runner": "3.6.22",
+    "@tarojs/router": "3.6.22",
+    "@tarojs/runtime": "3.6.22",
+    "@tarojs/shared": "3.6.22",
+    "@tarojs/taro": "3.6.22",
+    "@tarojs/taro-h5": "3.6.22",
+    "@tarojs/taro-rn": "3.6.22",
+    "antd-mobile": "^5.34.0",
     "async-validator": "^4.2.5",
     "cross-ui": "^4.0.41",
     "crypto-browserify": "^3.12.0",
     "dayjs": "^1.11.6",
     "expo": "~46.0.2",
-    "laf-client-sdk": "^1.0.0-beta.2",
     "mobx": "^4.8.0",
     "mobx-react": "^6.1.4",
     "react": "^18.0.0",
@@ -70,25 +69,38 @@
   "devDependencies": {
     "@babel/core": "^7.8.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "@tarojs/cli": "3.5.12",
-    "@tarojs/webpack5-runner": "3.5.7",
+    "@tarojs/cli": "3.6.22",
+    "@tarojs/taro-loader": "3.6.22",
+    "@tarojs/test-utils-react": "^0.1.1",
+    "@tarojs/webpack5-runner": "3.6.22",
+    "@types/jest": "^29.3.1",
+    "@types/node": "^18.15.11",
     "@types/react": "^18.0.0",
     "@types/webpack-env": "^1.13.6",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "babel-plugin-import": "^1.13.6",
-    "babel-preset-taro": "3.5.12",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "babel-preset-taro": "3.6.22",
     "eslint": "^8.12.0",
-    "eslint-config-taro": "3.5.12",
+    "eslint-config-taro": "3.6.22",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.5.0",
+    "postcss": "^8.4.18",
     "react-refresh": "^0.11.0",
     "stylelint": "9.3.0",
-    "typescript": "^4.1.0",
-    "webpack": "5.69.0"
+    "ts-node": "^10.9.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
+    "typescript": "^5.1.0",
+    "webpack": "5.78.0"
   },
   "resolutions": {
     "**/sass": "1.58.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "sass": "1.58.3"
+    }
   }
 }
