--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,9 +1,29 @@
 {
         "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
-        "projectname": "disscode-taro",
+        "projectname": "appthen-taro",
         "setting": {
                 "compileHotReLoad": false,
                 "bigPackageSizeSupport": false
         },
-        "libVersion": "2.30.2"
+        "libVersion": "3.2.5",
+        "condition": {
+                "miniprogram": {
+                        "list": [
+                                {
+                                        "name": "",
+                                        "pathName": "pages/css_debug/index",
+                                        "query": "",
+                                        "launchMode": "default",
+                                        "scene": null
+                                },
+                                {
+                                        "name": "",
+                                        "pathName": "pages/index/index",
+                                        "query": "",
+                                        "launchMode": "default",
+                                        "scene": null
+                                }
+                        ]
+                }
+        }
 }
